# web_scraping

./: pyproject.toml  web_scraping.ipynb  web_scraping_bak20231117.py
question_answering/: question_answering.ipynb
